[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
author = "Dayvster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["derive"] }
num-format = "0.4.4"
psutil = "3.2.2"
termion = "2.0.1"
